FIND_PACKAGE(Boost ${Boost_FIND_VERSION}
  COMPONENTS unit_test_framework serialization)

IF(Boost_FOUND)

  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

  IF (NOT Boost_USE_STATIC_LIBS)
    ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK=1)
  ENDIF (NOT Boost_USE_STATIC_LIBS)

  SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${IZENELIB_SOURCE_DIR}/testbin)

  ADD_SUBDIRECTORY(am)
  ADD_SUBDIRECTORY(util)
  ADD_SUBDIRECTORY(net)
  ADD_SUBDIRECTORY(string)
  # ADD_SUBDIRECTORY(3rdparty)
  # ADD_SUBDIRECTORY(am_test)
  # ADD_SUBDIRECTORY(cache)
  # ADD_SUBDIRECTORY(db)
  # ADD_SUBDIRECTORY(ir)
  # ADD_SUBDIRECTORY(sdb)

ENDIF(Boost_FOUND)
