FIND_PACKAGE(Boost ${Boost_FIND_VERSION}
  COMPONENTS unit_test_framework serialization)
LIST(FIND REAL_BUILD_COMPONENTS "febird" _febird)

IF(Boost_FOUND AND _febird GREATER -1)

  GET_FILENAME_COMPONENT(FileTestHelper
    "${CMAKE_CURRENT_SOURCE_DIR}/TestHelper.h" ABSOLUTE)
  SET(FileTestHelper "${FileTestHelper}")

  GET_FILENAME_COMPONENT(TEST_TMP_DIR
    ${IZENELIB_SOURCE_DIR}/testbin/tmp
    ABSOLUTE
    )
  EXECUTE_PROCESS(COMMAND cmake -E make_directory "${TEST_TMP_DIR}")

  # escape path
  STRING(REPLACE "\\" "\\\\" TEST_TMP_DIR ${TEST_TMP_DIR})
  STRING(REPLACE "\n" "\\n" TEST_TMP_DIR ${TEST_TMP_DIR})
  STRING(REPLACE "\"" "\\\"" TEST_TMP_DIR ${TEST_TMP_DIR})

  CONFIGURE_FILE(TestDir.h.in ${CMAKE_CURRENT_SOURCE_DIR}/TestDir.h)

  INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})

  SET(RUNTIME_OUTPUT_DIRECTORY ${IZENELIB_SOURCE_DIR}/testbin)

  ADD_SUBDIRECTORY(am)
  ADD_SUBDIRECTORY(util)
  ADD_SUBDIRECTORY(net)
  ADD_SUBDIRECTORY(string)
  ADD_SUBDIRECTORY(cache)
  
  # ADD_SUBDIRECTORY(3rdparty)
  # ADD_SUBDIRECTORY(am_test)
  # ADD_SUBDIRECTORY(cache)
  # ADD_SUBDIRECTORY(db)
  # ADD_SUBDIRECTORY(ir)
  ADD_SUBDIRECTORY(sdb)

ENDIF(Boost_FOUND AND _febird GREATER -1)
